--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,14 @@
 :root {
---color-logo:#4D5AE5 
---color-text-main:#2E2F42 
---color-text-add:#434455 
---color-text-light:#ffff
---color-background-dark:#2E2F42
---color-background-light:#E5E5E5
---color-background-white:#ffff
---color-accent:#404BBF
+--color-logo:#4D5AE5;
+--color-text-main:#2E2F42; 
+--color-text-add:#434455; 
+--color-text-light:#ffff; 
+--color-background-dark:#2E2F42; 
+--color-background-light:#E5E5E5; 
+--color-background-white:#FFFF; 
+--color-accent:#404BBF; 
+--color-background-cards:#F4F4FD;
+--color-btn-footer-light:#E7E9FC; 
 }
 
 
@@ -42,7 +44,7 @@ body {
 
 .header-navigation {
 }
-.header-title {
+.logo {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -50,17 +52,11 @@ body {
   display: flex;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color:#4d5ae5;
+  color: var(--color-logo);
 }
-.header-title-link-two  {
- font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-  display: flex;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color:#2e2f42;
+.logo-header {
+ 
+  color:var(--color-text-main);
 }
 
 .header-list {
@@ -74,36 +70,27 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-text-main);
 }
 .nav-link:focus
 .nav-link:hover{
-    color: #404bbf;
+    color: var(--color-accent);
 }
 
 /*----Hero--*/
 .hero {
-  background-color:#2e2f42;
+  background-color: var(--color-background-dark);
 }
 
 .hero-text {
-  font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  color:#ffffff;
+  color: var(--color-background-white);
 }
 .hero-btn {
-display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 16px 32px;
-gap: 10px;
-width: 169px;
-height: 56px;
-left: 636px;
-top: 428px;
-background: #4D5AE5;
+  font-family: inherit;
+background: var(--color-logo);
 box-shadow: 0px 4px 4px none;
 border-radius: 4px;
 font-weight: 500;
@@ -111,14 +98,14 @@ font-size: 16px;
 line-height: 1.5;
 align-items: center;
 letter-spacing: 0.04em;
-color: #FFFFFF;
+color: var(--color-background-white);
  
 }
 
 /*---Features--*/
 
 .features {
-  background-color:#e5e5e5;
+  background-color: var(--color-background-light);
 }
 .features-list {
 }
@@ -129,14 +116,14 @@ color: #FFFFFF;
   font-size: 20px;
   line-height: 1,2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-text-main);
 }
 .features-text,
 .team-text {
   font-size: 16px;
   line-height: 1, 5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--color-text-add);
 }
 
 /*----Work-examples---*/
@@ -147,13 +134,13 @@ color: #FFFFFF;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-background-dark);
 }
 .work-examples-item {
 }
 /*---Section4-team---*/
 .Team {
-  background-color:#F4F4FD; s
+  background-color: var(--color-background-cards); 
 }
 .team-title {
 }
@@ -162,41 +149,28 @@ color: #FFFFFF;
 }
 
 .team-item {
-    background-color: #ffff;
+    background-color: var(--color-background-white) ;
 }
 .team-pretext {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-background-dark)
 }
 .team-text {
 }
 /*---Footer---*/
 .footer {
 }
-.footer-link {
-    font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-  display: flex;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color:#4d5ae5;
+.logo {
+    
 }
 .link {
 }
-.footer-link-two {
-    font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-  display: flex;    
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color:#ffffff;
+.logo-footer {
+
+  color:var(--color-background-white);
 }
 .footer-text {
 }
@@ -214,7 +188,7 @@ color: #FFFFFF;
   font-size: 16px;
   line-height: 1,5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--color-text-add);
 }
 /*---Buttons-cards--*/
 .Button-card {
@@ -231,28 +205,18 @@ color: #FFFFFF;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
   letter-spacing: 0.04em;
-  color: #4d5ae5;
+  color: var(--color-logo);
   cursor: pointer;
-
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 12px 24px;
-  width: 116px;
-  height: 48px;
-  background: #f4f4fd;
-  border: 1px solid #e7e9fc;
+  background: var(--color-background-cards);
+  border: 1px solid var(--color-btn-footer-light);
   border-radius: 4px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+
 }
 .btn:hover,
 .btn:focus {
-  color: #ffffff;
-  background-color: #404bbf;
+  color: var(--color-background-white);
+  background-color: var(--color-accent);
 }
 
 .project-card-list {
@@ -264,46 +228,31 @@ color: #FFFFFF;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-background-dark);
 }
 .project-item-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--color-text-add);
 }
 
 /*---Footer --*/
 .footer {
-  background-color: #2e2f42;
+  background-color: var(--color-background-dark);
 }
-.footer-link {
-font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-  display: flex;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color:#4d5ae5;
+.logo {
+
 
   
 }
-.footer-link-two {
-    font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-  display: flex;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color:#FFFFFF;
-  
-  
+.logo-footer {
+    
+ 
 }
 .footer-text {
   font-size: 16px;
-  line-height: 1.5px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #e7e9fc;
+  color: var(--color-btn-footer-light);
 }
